Fix distorted Icon in PageHeader component

--- a/Client/Components/PageHeader.razor.css
+++ b/Client/Components/PageHeader.razor.css
@@ -2,6 +2,10 @@
     height: 2.5rem;
     display: flex;
     flex-direction: row;
-    align-items: stretch;
+    align-items: center;
     justify-content: flex-start;
+}
+
+.pageheader h2 {
+    margin: 0 !important;
 }
